--- a/web/web-app/src/main/resources/application.yml
+++ b/web/web-app/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://192.168.10.101:3306/lease?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
+    url: jdbc:mysql://localhost:8080/lease?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
     username: root
-    password: gong.123
+    password: 123
     hikari:
       connection-test-query: SELECT 1 # 自动检测连接
       connection-timeout: 60000 #数据库连接超时时间,默认30秒
@@ -20,7 +20,7 @@ spring:
 
   data:
     redis:
-      host: 192.168.10.101
+      host: localhost:8080
       port: 6379
       database: 0
 
@@ -34,10 +34,10 @@ springdoc:
   default-flat-param-object: true
 
 
-aliyun:
-  sms:
-    access-key-id: LTAI5tNGtpX3npCMWrBeT6EX
-    access-key-secret: qcR23NPDJIa0RVigEbQeva6ZGfTCom
-    endpoint: dysmsapi.aliyuncs.com
+#aliyun:
+#  sms:
+#    id值access-key-id:
+#    密钥：access-key-secret:
+#    endpoint:
 
 
