--- a/web/web-admin/src/main/resources/application.yml
+++ b/web/web-admin/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:8080/lease?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
+    url: jdbc:mysql://localhost:3306/lease?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2b8
     username: root
-    password: 123
+    password:
     hikari:
       connection-test-query: SELECT 1 # 自动检测连接
       connection-timeout: 60000 #数据库连接超时时间,默认30秒
@@ -19,7 +19,7 @@ spring:
     time-zone: GMT+8
   data:
     redis:
-      host: localhost:8080
+      host: localhost
       port: 6379
       database: 0
 
@@ -29,7 +29,7 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 minio:
-  endpoint: http://localhost:8080
+  endpoint: http://localhost
   access-key: minioadmin
   secret-key: minioadmin
   bucket-name: lease
